# HaplotypeVisualizer

./: .env  .gitignore  .prettierrc  LICENSE  README.md  ideasAndTodos.md  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  tsconfig.json
api/: main.py
api/routers/: items.py
data/: 10kbubbles.gfa  demo1.csv  demo1.gfa  demo2.csv  demo2.gfa
haplovis_back/: requirements.txt
haplovis_back/cli/: setup.py
haplovis_back/server/: setup.py
haplovis_front/: package-lock.json  package.json  tsconfig.json
haplovis_front/src/: AppRouter.tsx  store.ts
public/: index.html  manifest.json
server/: main.py  mypy.ini  requirements.txt
server/cli/: gfa.py  indexer.py  kdtree.py  layout.py  main.py  serialization.py
server/graph_layout/: cytoscape.ts  endpoints.ts  package-lock.json  package.json
server/logic/: density.py  files.py  gfa.py  layout.py  pheno.py
server/managers/: BookmarkManager.py  FileManager.py  GfaManager.py  PhenoManager.py  __init__.py  bookmarks.py  files.py  gfa.py  layout.py  pheno.py
server/routers/: bookmarks.py  files.py  gfa.py  layout.py  pheno.py
server/schemas/: bookmark.py  file.py  gfa.py  layout.py  pheno.py
server/server_data/: data.py
server/utils/: plots.py
src/: .prettierignore  AppRouter.tsx  Sidebar.tsx  graph.css  index.tsx  store.ts  types.ts
src/api/: bookmarks.ts  files.ts  gfa.ts  layout.ts  pheno.ts
src/communication/: ErrorHandling.ts  FileCommunication.ts
src/components/: AppRouter.tsx  BarPlot.tsx  ColorPicker.tsx  FileTable.tsx  Header.tsx  InfoCard.tsx  graph.tsx  (+12 more)
(+352 files in other folders)
