[metadata]
name = haplovis
version = attr: haplovis.__version__
description = Graph-based haplotype visualizer
long_description = file: README.md
keywords = genomics, bioinformatics
license = MIT license
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Environment :: Web Environment

[options]
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    fastapi
    gfapy
    numpy
    orjson
    pandas
    pydantic
    setuptools
    typer
    uvicorn
    python-multipart

[options.package_data]
* = *.txt, *.rst, *.js, *.css, *.html, *.ts, *.json

[options.entry_points]
console_scripts =
    haplovis = haplovis.__main__:CLI

[options.packages.find]
where = src
exclude =
    src/frontend*
    docs*
